--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,10 +1,11 @@
 <div class="jumbotron">
-  <h1>Haus Orange</h1>
-  <p class="lead">
-    Willkommen auf der Homepage des Ferienhauses Orange in Tübingen.
+    <h1>Haus Orange</h1>
+    <p class="lead">
+        Willkommen auf der Homepage des Ferienhauses Orange in Tübingen.
+    </p>
 </div>
 
-<div class="row marketing" ng-repeat="image in homeImages">
-    <div home-image content="image"></div>
+<div class="row marketing" >
+    <div home-image class="img-content-box" content="image" ng-repeat="image in homeImages"></div>
 </div>
 
