--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,8 @@ $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
 
+$strongorange: #D85900;
+$normalorange: #E79144;
 .browsehappy {
     margin: 0.2em 0;
     background: #ccc;
@@ -132,4 +134,43 @@ body {
 #footer, #push {
   height: 60px;
   background-color: #f5f5f5;
+}
+
+.body {
+  background-color: #6E6E6E !important;
+}
+.content {
+  background-color: #363636;
+  border-radius: 14px;
+  padding: 15px;
+}
+.body {
+  color: #D4D4D4;
+}
+
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+  background-color: $strongorange;
+}
+
+a {
+  color: $strongorange;
+}
+a:hover {
+  color: #363636;
+
+}
+
+.jumbotron {
+  background-image: url(../images/banner.jpg);
+  padding-top: 16px;
+  padding-bottom: 15px;
+  h1 {
+  color: $normalorange;
+  }
+}
+.jumbotron p.lead {
+  color: #CCCCCC;
+}
+iframe {
+  border-radius: 10px;
 }
