--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -12,7 +12,7 @@
 
     stschade@web.de
 </pre>
-    Einen Mustermietvertrag finden sie <a href="#">hier</a>
+    Einen Mustermietvertrag finden sie <a href="/images/mietvertrag.pdf">hier</a>
 </div>
 <h2>Impressum</h2>
 <p>Anbieter der Seite ist Stefan Schade</p>
