--- a/app/views/price.html
+++ b/app/views/price.html
@@ -11,6 +11,6 @@
 <h2 style="font-size: small;"><span style="font-family: Arial; font-size: medium;"><strong>Leih-Fahrräder</strong></span></h2>
 <p style="font-size: small;"><span style="font-family: Arial; font-size: small;">4 - 6 €&nbsp;/ Tag</span></p>
 <h2 style="font-size: small;"><span style="font-family: Arial; font-size: medium;"><strong><em>Buchungsbedingungen</em></strong></span></h2>
-<p style="font-size: small;"><a title="Mietformular" href="/images/stories/HausOrange/Mietvertrag.pdf" target="_blank"><span style="font-family: Arial; font-size: small;">Mietformular</span></a></p>
+<p style="font-size: small;"><a title="Mietformular" href="/images/mietvertrag.pdf" target="_blank"><span style="font-family: Arial; font-size: small;">Mietformular</span></a></p>
 
 </div>
