--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,17 +1,15 @@
-<h2>Kontakt & Buchung</h2>
+<div class="jumbotron">
+    <h1>Kontakt & Buchung</h1>
+</div>
 <div>
     Für Anfragen und Buchungen wenden Sie sich bitte an:
-<pre>
-    Stefan Schade
-
-    Sieben-Höfe-Straße 100
-
-    72072 Tübingen
-
-    07071 / 707965
-
-    stschade@web.de
-</pre>
+    <p class="address">
+        <span>Stefan Schade</span>
+        <span>Sieben-Höfe-Straße 100</span>
+        <span>72072 Tübingen</span>
+        <span>07071 / 707965</span>
+        <span>stschade@web.de</span>
+    </p>
     Einen Mustermietvertrag finden sie <a href="/images/mietvertrag.pdf">hier</a>
 </div>
 <h2>Impressum</h2>
