--- a/app/views/price.html
+++ b/app/views/price.html
@@ -1,17 +1,16 @@
 <div class="jumbotron">
     <h1>Preise</h1>
 </div>
+<h3>2017</h3>
 <p>Die Miete beträgt bei Belegung durch zwei Personen</p>
-<p> 67€ pro Übernachtung (Mindestbetrag&nbsp; 268€)<br></p>
+<p> 69€ pro Übernachtung (Mindestbetrag&nbsp; 276€)<br></p>
 <p>bei 1 Woche Gesamtdauer &nbsp; 59,50€ pro Übernachtung</p>
 <p>bei 2-4 Wochen Gesamtdauer 53,50€ pro Übernachtung</p>
-<p>Jede weitere Person wird mit 15 Euro<span style="font-family: Arial;"> pro Übernachtung gerechnet.</span></p>
-<p>Monatsmiete&nbsp; 1280€<br></p>
-<p>Jede weitere Person wird mit 300 Euro Monatsmiete gerechnet.</p>
-<p>Im Mietpreis ist enthalten:<br>- Bettwäsche. Der Wechsel der Bettwäsche erfolgt alle 14 Tage.<br>- Handtücher. Der Wechsel der Handtücher erfolgt alle 4 Tage.<br>- Küchentücher<br>- Endreinigung<br>- Kosten für Wasser und Energie (Strom, Heizung), Internet-, Telefon- (Festnetz Deutschland), Radio-<br>und Fernsehanschluss.</p>
+<p>Jede weitere Person wird mit 15,50 Euro<span style="font-family: Arial;"> pro Übernachtung gerechnet.</span></p>
+<p>Monatsmiete&nbsp; 1320€<br></p>
+<p>Jede weitere Person wird mit 310 Euro Monatsmiete gerechnet.</p>
+<p>Im Mietpreis ist enthalten:<br>- Bettwäsche. Der Wechsel der Bettwäsche erfolgt alle 14 Tage.<br>- Handtücher. Der Wechsel der Handtücher erfolgt alle 4 Tage.<br>- Küchentücher<br>- Endreinigung<br>- Kosten für Wasser und Energie (Strom, Heizung), Internet-, Telefon- (Festnetz Deutschland), Radio-<br>und Fernsehanschluss.<br>- Eine Waschmaschine steht für eine geringe Nutzungsgebühr bereit.</p>
 <p>Die Preise verstehen sich inklusive der geltenden Mehrwertsteuer. Die Miete ist im Voraus fällig. Der Gast erhält eine Endabrechnung mit ausgewiesener Mehrwertsteuer.</p>
-<h2><strong>Leih-Fahrräder</strong></h2>
-<p>4 - 6 €&nbsp;/ Tag</p>
 <h2><strong><em>Buchungsbedingungen</em></strong></h2>
 <p><a title="Mietformular" href="/images/mietvertrag.pdf" target="_blank"><span style="font-family: Arial; font-size: small;">Mietformular</span></a></p>
 
