Update prices and wohnzimmer image; add albcard information

--- a/app/views/price.html
+++ b/app/views/price.html
@@ -1,15 +1,28 @@
 <div class="jumbotron">
     <h1>Preise</h1>
 </div>
-<p>Die Miete beträgt bei Belegung durch zwei Personen</p>
-<p> 69€ pro Übernachtung (Mindestbetrag&nbsp; 276€)<br></p>
-<p>bei 1 Woche Gesamtdauer &nbsp; 61,30€ pro Übernachtung</p>
-<p>bei 2-4 Wochen Gesamtdauer 55,10€ pro Übernachtung</p>
-<p>Jede weitere Person wird mit 15,50 Euro<span style="font-family: Arial;"> pro Übernachtung gerechnet.</span></p>
-<p>Monatsmiete&nbsp; 1320€<br></p>
-<p>Jede weitere Person wird mit 310 Euro Monatsmiete gerechnet.</p>
-<p>Im Mietpreis ist enthalten:<br>- Bettwäsche. Der Wechsel der Bettwäsche erfolgt alle 14 Tage.<br>- Handtücher. Der Wechsel der Handtücher erfolgt alle 4 Tage.<br>- Küchentücher<br>- Endreinigung<br>- Kosten für Wasser und Energie (Strom, Heizung), Internet-, Telefon- (Festnetz Deutschland), Radio-<br>und Fernsehanschluss.<br>- Eine Waschmaschine steht für eine geringe Nutzungsgebühr bereit.</p>
+
+<p>Die Miete beträgt bei Belegung durch zwei Personen 72 Euro pro Übernachtung (Mindestbetrag 288€)</p>
+<p>bei 1 Woche Gesamtdauer 64€ pro Übernachtung</p>
+<p>bei 2-4 Wochen Gesamtdauer 57,50€ pro Übernachtung</p>
+<p>Jede weiter Person wird mit 16,20€ pro Übernachtung gerechnet.</p>
+<p>Monatsmiete 1380€</p>
+<p>Jede weitere Person wird mit 325€ Monatsmiete gerechnet.</p>
+<p>Die Preise verstehen sich inklusive der geltenden Mehrwertsteuer. Die Miete ist im Voraus fällig. Der Gast erhält eine Endabrechnung mit ausgewiesener Mehrwertsteuer.</p>
+
+<p>
+  Im Mietpreis ist enthalten:
+  <ul>
+    <li><a href="https://albcard.de" style="font-weight: 650">AlbCard</a> geschenkt: freier ÖPNV und freier Eintritt zu vielen Attraktionen. &ndash; gilt nicht für Geschäftsreisende &ndash;</li>
+    <li>Bettwäsche. Der Wechsel der Bettwäsche erfolgt alle 14 Tage.</li>
+    <li>Handtücher. Der Wechsel der Handtücher erfolgt alle 4 Tage.</li>
+    <li>Küchentücher</li>
+    <li>Endreinigung</li>
+    <li>Kosten für Wasser und Energie (Strom, Heizung), Internet-, Telefon- (Festnetz Deutschland), Radio- und Fernsehanschluss.</li>
+    <li>Eine Waschmaschine steht für eine geringe Nutzungsgebühr bereit.</li>
+  </ul>
+</p>
+
 <p>Die Preise verstehen sich inklusive der geltenden Mehrwertsteuer. Die Miete ist im Voraus fällig. Der Gast erhält eine Endabrechnung mit ausgewiesener Mehrwertsteuer.</p>
 <h2><strong><em>Buchungsbedingungen</em></strong></h2>
 <p><a title="Mietformular" href="/images/mietvertrag.pdf" target="_blank"><span style="font-family: Arial; font-size: small;">Mietformular</span></a></p>
-
