--- a/app/views/price.html
+++ b/app/views/price.html
@@ -13,7 +13,7 @@
 <p>
   Im Mietpreis ist enthalten:
   <ul>
-    <li><a href="https://albcard.de" style="font-weight: 650">AlbCard</a> geschenkt: freier ÖPNV und freier Eintritt zu vielen Attraktionen. &ndash; gilt nicht für Geschäftsreisende &ndash;</li>
+    <li><a href="https://www.schwaebischealb.de/albcard" style="font-weight: 650">AlbCard</a> geschenkt: freier ÖPNV und freier Eintritt zu vielen Attraktionen. &ndash; gilt nicht für Geschäftsreisende &ndash;</li>
     <li>Bettwäsche. Der Wechsel der Bettwäsche erfolgt alle 14 Tage.</li>
     <li>Handtücher. Der Wechsel der Handtücher erfolgt alle 4 Tage.</li>
     <li>Küchentücher</li>
